<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="celestial_point_time">%1$s · %2$s</string>
    <string name="celestial_point_number">Point %1$s</string>
    <string name="celestial_current_position">Current</string>
    <string name="celestial_point_current">Current</string>
</resources>
